fix: textures and custom particle effect